# uv-demos

00-pip-baseline/: Dockerfile  hermeto.env  main.py  readme.md  requirements-build.txt  requirements.in  requirements.txt
00-pip-baseline/hermeto-output/: .build-config.json  bom.json
01-problem-uv-offline/: README.md  pyproject.toml
01-problem-uv-offline-copy/: README.md  main.py  pyproject.toml
0101-problem-uv-offline/: README.md  pyproject.toml
02-inject-files-demo/: .dockerignore  Dockerfile  hermeto.env  pyproject.toml  readme.md
0202-inject-files-demo/: pyproject.toml  requirements-build.txt  requirements.txt
